// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`$gt > JSON scalars > Can compare with number scalars > SQL Query for filter: {"settings.scalar":{"$gt":-4}} 1`] = `
{
  "params": [
    -4,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.scalar" RETURNING SIGNED NULL ON ERROR) > ?",
}
`;

exports[`$gt > JSON scalars > Can compare with number scalars > SQL Query for filter: {"settings.scalar":{"$gt":4}} 1`] = `
{
  "params": [
    4,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.scalar" RETURNING SIGNED NULL ON ERROR) > ?",
}
`;

exports[`$gt > JSON scalars > Can compare with number scalars > SQL Query for not match filter: {"settings.scalar":{"$gt":5}} 1`] = `
{
  "params": [
    5,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.scalar" RETURNING SIGNED NULL ON ERROR) > ?",
}
`;

exports[`$gt > JSON scalars > Ignores null > SQL Query for not match filter: {"settings.scalar":{"$gt":-1}} 1`] = `
{
  "params": [
    -1,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.scalar" RETURNING SIGNED NULL ON ERROR) > ?",
}
`;

exports[`$gt > JSON scalars > Ignores null > SQL Query for not match filter: {"settings.scalar":{"$gt":5}} 1`] = `
{
  "params": [
    5,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.scalar" RETURNING SIGNED NULL ON ERROR) > ?",
}
`;

exports[`$gt > JSON scalars > Ignores string values that cannot convert to numbers > SQL Query for not match filter: {"settings.scalar":{"$gt":-1}} 1`] = `
{
  "params": [
    -1,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.scalar" RETURNING SIGNED NULL ON ERROR) > ?",
}
`;

exports[`$gt > JSON scalars > Ignores string values that cannot convert to numbers > SQL Query for not match filter: {"settings.scalar":{"$gt":5}} 1`] = `
{
  "params": [
    5,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.scalar" RETURNING SIGNED NULL ON ERROR) > ?",
}
`;

exports[`$gt > JSON scalars > Matches booleans > SQL Query for filter: {"settings.scalar":{"$gt":-1}} 1`] = `
{
  "params": [
    -1,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.scalar" RETURNING SIGNED NULL ON ERROR) > ?",
}
`;

exports[`$gt > JSON scalars > Matches booleans > SQL Query for not match filter: {"settings.scalar":{"$gt":1}} 1`] = `
{
  "params": [
    1,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.scalar" RETURNING SIGNED NULL ON ERROR) > ?",
}
`;

exports[`$gt > JSON scalars > Mathes string values that can convert to numbers > SQL Query for filter: {"settings.scalar":{"$gt":-1}} 1`] = `
{
  "params": [
    -1,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.scalar" RETURNING SIGNED NULL ON ERROR) > ?",
}
`;

exports[`$gt > JSON scalars > Mathes string values that can convert to numbers > SQL Query for not match filter: {"settings.scalar":{"$gt":15}} 1`] = `
{
  "params": [
    15,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.scalar" RETURNING SIGNED NULL ON ERROR) > ?",
}
`;

exports[`$gt > JSON scalars > Mathes string values that can convert to numbers > SQL Query for not match filter: {"settings.scalar":{"$gt":16}} 1`] = `
{
  "params": [
    16,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.scalar" RETURNING SIGNED NULL ON ERROR) > ?",
}
`;

exports[`$gt > MySQL Behaviour > Comparing JSON numbers values is numberic > SQL Query for filter: {"settings.age":{"$gt":-9}} 1`] = `
{
  "params": [
    -9,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.age" RETURNING SIGNED NULL ON ERROR) > ?",
}
`;

exports[`$gt > MySQL Behaviour > Comparing JSON numbers values is numberic > SQL Query for filter: {"settings.age":{"$gt":0}} 1`] = `
{
  "params": [
    0,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.age" RETURNING SIGNED NULL ON ERROR) > ?",
}
`;

exports[`$gt > MySQL Behaviour > Comparing JSON numbers values is numberic > SQL Query for filter: {"settings.age":{"$gt":1}} 1`] = `
{
  "params": [
    1,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.age" RETURNING SIGNED NULL ON ERROR) > ?",
}
`;

exports[`$gt > MySQL Behaviour > Comparing JSON numbers values is numberic > SQL Query for filter: {"settings.age":{"$gt":9}} 1`] = `
{
  "params": [
    9,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.age" RETURNING SIGNED NULL ON ERROR) > ?",
}
`;

exports[`$gt > MySQL Behaviour > Comparing JSON numbers values is numberic > SQL Query for not match filter: {"settings.age":{"$gt":10}} 1`] = `
{
  "params": [
    10,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.age" RETURNING SIGNED NULL ON ERROR) > ?",
}
`;

exports[`$gt > MySQL Behaviour > Comparing JSON numbers values is numberic > SQL Query for not match filter: {"settings.age":{"$gt":12}} 1`] = `
{
  "params": [
    12,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.age" RETURNING SIGNED NULL ON ERROR) > ?",
}
`;

exports[`$gt > MySQL Behaviour > Comparing JSON numbers values is numberic > SQL Query for not match filter: {"settings.age":{"$gt":20}} 1`] = `
{
  "params": [
    20,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.age" RETURNING SIGNED NULL ON ERROR) > ?",
}
`;

exports[`$gt > MySQL Behaviour > Comparing JSON string values is case insensitive > SQL Query for filter: {"settings.name":{"$gt":"Alic"}} 1`] = `
{
  "params": [
    "alic",
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.name" RETURNING CHAR CHARACTER SET utf8mb4 NULL ON ERROR) > ?",
}
`;

exports[`$gt > MySQL Behaviour > Comparing JSON string values is case insensitive > SQL Query for filter: {"settings.name":{"$gt":"a"}} 1`] = `
{
  "params": [
    "a",
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.name" RETURNING CHAR CHARACTER SET utf8mb4 NULL ON ERROR) > ?",
}
`;

exports[`$gt > MySQL Behaviour > Comparing JSON string values is case insensitive > SQL Query for filter: {"settings.name":{"$gt":"alic"}} 1`] = `
{
  "params": [
    "alic",
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.name" RETURNING CHAR CHARACTER SET utf8mb4 NULL ON ERROR) > ?",
}
`;

exports[`$gt > MySQL Behaviour > Comparing JSON string values is case insensitive > SQL Query for not match filter: {"settings.name":{"$gt":"ALICE"}} 1`] = `
{
  "params": [
    "alice",
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.name" RETURNING CHAR CHARACTER SET utf8mb4 NULL ON ERROR) > ?",
}
`;

exports[`$gt > MySQL Behaviour > Comparing JSON string values is case insensitive > SQL Query for not match filter: {"settings.name":{"$gt":"Alice"}} 1`] = `
{
  "params": [
    "alice",
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.name" RETURNING CHAR CHARACTER SET utf8mb4 NULL ON ERROR) > ?",
}
`;

exports[`$gt > MySQL Behaviour > Comparing JSON string values is case insensitive > SQL Query for not match filter: {"settings.name":{"$gt":"aLice"}} 1`] = `
{
  "params": [
    "alice",
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.name" RETURNING CHAR CHARACTER SET utf8mb4 NULL ON ERROR) > ?",
}
`;

exports[`$gt > MySQL Behaviour > Comparing JSON string values is case insensitive > SQL Query for not match filter: {"settings.name":{"$gt":"alice"}} 1`] = `
{
  "params": [
    "alice",
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.name" RETURNING CHAR CHARACTER SET utf8mb4 NULL ON ERROR) > ?",
}
`;

exports[`$gt > MySQL Behaviour > Comparing JSON string values is case insensitive > SQL Query for not match filter: {"settings.name":{"$gt":"b"}} 1`] = `
{
  "params": [
    "b",
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.name" RETURNING CHAR CHARACTER SET utf8mb4 NULL ON ERROR) > ?",
}
`;

exports[`$gt > MySQL Behaviour > Comparing numbers values is numberic > SQL Query for filter: {"age":{"$gt":-9}} 1`] = `
{
  "params": [
    -9,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE \`test_table\`.\`age\` > ?",
}
`;

exports[`$gt > MySQL Behaviour > Comparing numbers values is numberic > SQL Query for filter: {"age":{"$gt":0}} 1`] = `
{
  "params": [
    0,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE \`test_table\`.\`age\` > ?",
}
`;

exports[`$gt > MySQL Behaviour > Comparing numbers values is numberic > SQL Query for filter: {"age":{"$gt":1}} 1`] = `
{
  "params": [
    1,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE \`test_table\`.\`age\` > ?",
}
`;

exports[`$gt > MySQL Behaviour > Comparing numbers values is numberic > SQL Query for filter: {"age":{"$gt":9}} 1`] = `
{
  "params": [
    9,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE \`test_table\`.\`age\` > ?",
}
`;

exports[`$gt > MySQL Behaviour > Comparing numbers values is numberic > SQL Query for not match filter: {"age":{"$gt":10}} 1`] = `
{
  "params": [
    10,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE \`test_table\`.\`age\` > ?",
}
`;

exports[`$gt > MySQL Behaviour > Comparing numbers values is numberic > SQL Query for not match filter: {"age":{"$gt":12}} 1`] = `
{
  "params": [
    12,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE \`test_table\`.\`age\` > ?",
}
`;

exports[`$gt > MySQL Behaviour > Comparing numbers values is numberic > SQL Query for not match filter: {"age":{"$gt":20}} 1`] = `
{
  "params": [
    20,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE \`test_table\`.\`age\` > ?",
}
`;

exports[`$gt > MySQL Behaviour > Comparing string values is case insensitive > SQL Query for filter: {"name":{"$gt":"Alic"}} 1`] = `
{
  "params": [
    "alic",
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE \`test_table\`.\`name\` > ?",
}
`;

exports[`$gt > MySQL Behaviour > Comparing string values is case insensitive > SQL Query for filter: {"name":{"$gt":"a"}} 1`] = `
{
  "params": [
    "a",
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE \`test_table\`.\`name\` > ?",
}
`;

exports[`$gt > MySQL Behaviour > Comparing string values is case insensitive > SQL Query for filter: {"name":{"$gt":"alic"}} 1`] = `
{
  "params": [
    "alic",
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE \`test_table\`.\`name\` > ?",
}
`;

exports[`$gt > MySQL Behaviour > Comparing string values is case insensitive > SQL Query for not match filter: {"name":{"$gt":"ALICE"}} 1`] = `
{
  "params": [
    "alice",
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE \`test_table\`.\`name\` > ?",
}
`;

exports[`$gt > MySQL Behaviour > Comparing string values is case insensitive > SQL Query for not match filter: {"name":{"$gt":"Alice"}} 1`] = `
{
  "params": [
    "alice",
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE \`test_table\`.\`name\` > ?",
}
`;

exports[`$gt > MySQL Behaviour > Comparing string values is case insensitive > SQL Query for not match filter: {"name":{"$gt":"aLice"}} 1`] = `
{
  "params": [
    "alice",
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE \`test_table\`.\`name\` > ?",
}
`;

exports[`$gt > MySQL Behaviour > Comparing string values is case insensitive > SQL Query for not match filter: {"name":{"$gt":"alice"}} 1`] = `
{
  "params": [
    "alice",
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE \`test_table\`.\`name\` > ?",
}
`;

exports[`$gt > MySQL Behaviour > Comparing string values is case insensitive > SQL Query for not match filter: {"name":{"$gt":"b"}} 1`] = `
{
  "params": [
    "b",
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE \`test_table\`.\`name\` > ?",
}
`;

exports[`$gt > MySQL Behaviour > NULL values are always the smallest for JSON numbers > SQL Query for not match filter: {"settings.age":{"$gt":-1000}} 1`] = `
{
  "params": [
    -1000,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.age" RETURNING SIGNED NULL ON ERROR) > ?",
}
`;

exports[`$gt > MySQL Behaviour > NULL values are always the smallest for JSON numbers > SQL Query for not match filter: {"settings.age":{"$gt":0}} 1`] = `
{
  "params": [
    0,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.age" RETURNING SIGNED NULL ON ERROR) > ?",
}
`;

exports[`$gt > MySQL Behaviour > NULL values are always the smallest for JSON numbers > SQL Query for not match filter: {"settings.age":{"$gt":null}} 1`] = `
{
  "params": [],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.age" RETURNING SIGNED NULL ON ERROR) IS NOT NULL",
}
`;

exports[`$gt > MySQL Behaviour > NULL values are always the smallest for JSON strings > SQL Query for not match filter: {"settings.name":{"$gt":""}} 1`] = `
{
  "params": [
    "",
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.name" RETURNING CHAR CHARACTER SET utf8mb4 NULL ON ERROR) > ?",
}
`;

exports[`$gt > MySQL Behaviour > NULL values are always the smallest for JSON strings > SQL Query for not match filter: {"settings.name":{"$gt":"aaaa"}} 1`] = `
{
  "params": [
    "aaaa",
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.name" RETURNING CHAR CHARACTER SET utf8mb4 NULL ON ERROR) > ?",
}
`;

exports[`$gt > MySQL Behaviour > NULL values are always the smallest for JSON strings > SQL Query for not match filter: {"settings.name":{"$gt":null}} 1`] = `
{
  "params": [],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.name" RETURNING CHAR CHARACTER SET utf8mb4 NULL ON ERROR) IS NOT NULL",
}
`;

exports[`$gt > MySQL Behaviour > NULL values are always the smallest for strings > SQL Query for not match filter: {"name":{"$gt":""}} 1`] = `
{
  "params": [
    "",
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE \`test_table\`.\`name\` > ?",
}
`;

exports[`$gt > MySQL Behaviour > NULL values are always the smallest for strings > SQL Query for not match filter: {"name":{"$gt":"aaaa"}} 1`] = `
{
  "params": [
    "aaaa",
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE \`test_table\`.\`name\` > ?",
}
`;

exports[`$gt > MySQL Behaviour > NULL values are always the smallest for strings > SQL Query for not match filter: {"name":{"$gt":null}} 1`] = `
{
  "params": [],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE \`test_table\`.\`name\` IS NOT NULL",
}
`;
